--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "framer-motion": "^12.23.22",
     "geist": "latest",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
@@ -73,6 +74,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.18.8",
     "@types/react": "^19",
     "@types/react-dom": "^19",
